Create Configurable  JDBC connector image